<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TicketSelectionActivity" >

    <TextView
        android:id="@+id/ticket_selection_textlabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ticket_selection_text_label"
        android:textSize="20sp" />

    <Button
        android:id="@+id/ticket_selection_receive_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_tickets_receive_ticket" />

    <TextView
        android:id="@+id/ticket_selection_text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ticket_selection_2nd_label"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/ticket_selection_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ticket_selection_receive_lebel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ticket_selection_received_ticket_label"
        android:textSize="20sp" />

    <Button
        android:id="@+id/ticket_selection_validate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ticket_selection_validate_button" />

    <TextView
        android:id="@+id/ticket_selection_validation_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ticket_selection_Validation_label"
        android:textSize="20sp" />

</LinearLayout>
